--- a/k8s/petclinic_chart/templates/mysql-server-service.yaml
+++ b/k8s/petclinic_chart/templates/mysql-server-service.yaml
@@ -9,5 +9,5 @@ metadata:
   name: mysql-server
 spec:
   type: ExternalName
-  externalName: petclinic.clua0w36hpqf.us-east-1.rds.amazonaws.com 
+  externalName: petclinic.c87okki469kd.us-east-1.rds.amazonaws.com
 # Change this line with the endpoint of your RDS.
